populates array of Integers